Add Google Cloud CLI and push Docker image

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,3 +20,19 @@ jobs:
       - name: Build
         run: ${{ github.workspace }}/scripts/buildprod.sh
 
+      - name: Authenticate to Google Cloud
+        id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Use gcloud CLI
+        run: gcloud inf
+
+      - name: Build annd push Docker image
+        run: >
+          gcloud builds submit 
+          --tag us-central1-docker.pkg.dev/notely-462222/notely-ar-repo/ehafenmaier/notely:latest .
