--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,3 +36,12 @@ jobs:
         run: >
           gcloud builds submit 
           --tag us-central1-docker.pkg.dev/notely-462222/notely-ar-repo/ehafenmaier/notely:latest .
+      
+      - name: Deploy to Cloud Run
+        run: > 
+          gcloud run deploy notely 
+          --image us-central1-docker.pkg.dev/notely-462222/notely-ar-repo/ehafenmaier/notely:latest 
+          --region us-central1 
+          --allow-unauthenticated 
+          --project notely-462222 
+          --max-instances=4
