--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,5 +1,8 @@
 name: cd
 
+env:
+  DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
 on:
   push:
     branches:
@@ -16,6 +19,9 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.23.0"
+
+      - name: Install Goose 
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: Build
         run: ${{ github.workspace }}/scripts/buildprod.sh
@@ -37,6 +43,9 @@ jobs:
           gcloud builds submit 
           --tag us-central1-docker.pkg.dev/notely-462222/notely-ar-repo/ehafenmaier/notely:latest .
       
+      - name: Run database migrations
+        run: ${{ github.workspace }}/scripts/migrateup.sh
+
       - name: Deploy to Cloud Run
         run: > 
           gcloud run deploy notely 
